CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(CSC)

SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
# As of now, Clang does not support std::ranges. Use GCC instead.
# SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
SET(CMAKE_CXX_COMPILER /usr/bin/g++)
SET(CMAKE_CXX_FLAGS "-Wextra -Wall -Wshadow -Wpedantic -Werror -O3")

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_DEFINITIONS(-DDEBUG -DPARALLEL)

SET(SRC_FILES
    csc.cpp
)

ADD_EXECUTABLE(csc ${SRC_FILES})
TARGET_INCLUDE_DIRECTORIES(csc PRIVATE include)
